<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="whitaker.anthony.coolcalc.CalcActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@android:color/holo_blue_bright"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:selectAllOnFocus="true"
            android:text="@string/num0"
            android:textSize="45sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="4">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num7"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num8"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num9"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num4"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num5"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num6"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num1"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num3"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:elevation="2dp"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:elevation="2dp"
                android:text="@string/num0"
                android:textColor="#000000"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/divideButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:contentDescription="@string/op_divide"
                android:elevation="2dp"
                app:srcCompat="@drawable/divide" />

            <ImageButton
                android:id="@+id/multiplyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:contentDescription="@string/op_multiply"
                android:elevation="2dp"
                app:srcCompat="@drawable/multiply" />

            <ImageButton
                android:id="@+id/subtractButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:contentDescription="@string/op_subtract"
                android:elevation="2dp"
                app:srcCompat="@drawable/subtract" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:backgroundTint="#960000ff"
                android:contentDescription="@string/op_add"
                android:elevation="2dp"
                app:srcCompat="@drawable/add" />
        </GridLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/equalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="116dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/op_equals"
        android:elevation="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/equal"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
